# G-EDF-Loc

./: CMakeLists.txt  README.md  package.xml
config/: lidar_localization.yaml  lidar_localization_college.yaml  lidar_localization_snail.yaml
include/LiDAR/: LiDAR_localization.hpp  LiDAR_localization_no_imu.hpp  scan_processing.hpp  types.hpp  utils.hpp
include/filter/: eskf.hpp
include/gaussian_map/: gaussian_map.hpp
include/solver/: solver_analitic.hpp
launch/: lidar_localization.launch.py  map_publisher.launch.py
rviz/: localization.rviz
src/: LiDAR_localization.cpp  LiDAR_localization_no_imu.cpp  map_publisher_node.cpp  scan_processing.cpp  utils.cpp
